<resources>
    <string name="app_name">aldokan</string>
    <string name="skip">skip</string>
    <string name="start">start</string>
    <string name="sign_in">Sign in</string>
    <string name="phoe_num">phone number</string>
    <string name="create_a_nwe_account">Create a new account</string>
    <string name="skip_sign_in">Skip sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up2">Sign up</string>
    <string name="full_name">full name</string>
    <string name="email_optional">email</string>
    <string name="ss">By completing the registration process, you agree to the terms and conditions agreement</string>
    <string name="verification_code">Verification code</string>
    <string name="check">Check</string>
    <string name="resend_in">resend in :  </string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="en">EN</string>
    <string name="currency">S.R</string>
    <string name="edit_profile">Edit profile</string>
    <string name="promo_code">Promo code</string>
    <string name="my_addresses">My addresses</string>
    <string name="refund_request">Refund request</string>
    <string name="question_and_answer">Ask and consult</string>
    <string name="about_the_application">About the application</string>
    <string name="call_us">call us</string>
    <string name="share_the_app">Share the app</string>
    <string name="disengage_the_device">Sign out</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">اللغة العربية</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="disc">Share the code with your friends and loved ones and let them download the app And after their first request, he will bring you 10 riyals with your wallet and he started charging them 20 riyals with their wallets</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="notifications">Notifications</string>
    <string name="name">Name :</string>
    <string name="add_new_address">Add new address</string>
    <string name="discr">We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables We apply fresh fruits and vegetables and vegetables</string>
    <string name="reason">Reason</string>
    <string name="details">Details</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cart">Cart</string>
    <string name="items">items</string>
    <string name="order_number">order number :</string>
    <string name="canceled">canceled</string>
    <string name="waiting">waiting</string>
    <string name="delivering">delivering</string>
    <string name="delivery_done">arrived</string>
    <string name="search">search</string>
    <string name="search_for">what are you looking for ?</string>
    <string name="search11">Find your favorite products</string>
    <string name="sure_delete">Are you sure to delete the order?</string>
    <string name="sure_delete_all">Are you sure to delete all?</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="egp">EGP</string>
    <string name="product_details">product details</string>
    <string name="discription">discription</string>
    <string name="discription2"> وصف عن المنتج وصف عن المنتج وصف عن المنتج وصف عن المنتج وصف عن المنتج وصف عن المنتج وصف عن المنتج</string>
    <string name="Specifications">Specifications</string>
    <string name="Generalspecifications">General specifications</string>
    <string name="Otherspecifications">Other specifications</string>
    <string name="informations">informations</string>
    <string name="Similarproducts">Similar products</string>
    <string name="rate">Rate</string>
    <string name="the_rate">Rate</string>
    <string name="rates">Rates</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="send">Send</string>
    <string name="firstname">First name</string>
    <string name="secondname">Last name</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="street">street</string>
    <string name="tower">tower</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove all</string>
    <string name="Deliveryinformation">Delivery information</string>
    <string name="choose_address">Choose address</string>
    <string name="coupon2">enter code</string>
    <string name="addcoupon2">Add coupon</string>
    <string name="products_cost">products cost</string>
    <string name="deliveryfee">delivery fee</string>
    <string name="discount">Discount</string>
    <string name="Total">Total</string>
    <string name="Totalaaa">All prices include 15% VAT</string>
    <string name="cardnumber">Card Number</string>
    <string name="Expirydate">Expiry date  (MM/YY)</string>
    <string name="cvcnumber">CVC Number</string>
    <string name="cardname">Card Name</string>
    <string name="ordernow">Order now</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="allrequired">All fields required</string>
    <string name="weakpass">weak password</string>
    <string name="incorrectphone">incorrect phone</string>
    <string name="password">password</string>
    <string name="codeconf">Confirmed</string>
    <string name="codeconfnot">invalid code</string>
    <string name="addaddresssuccess">Address added successfully</string>
    <string name="sure_delete_address">Are you sure to delete the address?</string>
    <string name="deleteaddresssuccess">Address removed successfully</string>
    <string name="callussuccess">We will call you back soon</string>
    <string name="wallet">Wallet :</string>
    <string name="sure_delete_noti">Are you sure to delete the notification?</string>
    <string name="deletenotificationsuccess">notification removed successfully</string>
    <string name="loginagain">Session is expired please login again</string>
    <string name="succ">Rate sent successfully</string>
    <string name="succ2">No Data</string>
    <string name="invalid_coupon">invalid coupon</string>
    <string name="order_saved">order saved successfully</string>
    <string name="basket_empty">cart is empty</string>
    <string name="must_login">sign up</string>

</resources>
