<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginVM"
            type="com.example.aldokana.viewModels.LoginViewModel" />
    </data>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/frame_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_150sdp"
        android:background="@drawable/shape_rounded"
        android:orientation="vertical">

        <com.example.aldokana.MyTextViewCairo
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/shape_rounded_grey"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/phone_img"
            android:backgroundTint="@color/colorTextHint"/>

        <com.example.aldokana.MyEditTextBold
            android:textAlignment="viewStart"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/_10sdp"
            android:id="@+id/phone_txt"
            android:textSize="@dimen/_14ssp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/phoe_num"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/shape_rounded_grey"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/passwordimg"
                android:layout_gravity="center"
                android:id="@+id/password_img"
                android:layout_marginStart="@dimen/_10sdp"
                android:backgroundTint="@color/colorTextHint"/>



            <com.example.aldokana.MyEditTextBold
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/password_txt"
                android:textSize="@dimen/_14ssp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:inputType="textPassword"/>


        </androidx.appcompat.widget.LinearLayoutCompat>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/shape_rounded_g">

            <ng.max.slideview.SlideView
                app:sv_animateSlideText="true"
                android:id="@+id/slideView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sv_buttonBackgroundColor="@color/colorPrimaryDark"
                app:sv_buttonImage="@drawable/ic_baseline_arrow_forward_24"
                app:sv_slideBackgroundColor="@color/colorPrimaryDark"
                app:sv_slideTextColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"/>

            <com.example.aldokana.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"/>


        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center">

        <com.example.aldokana.MyTextViewCairo
            android:id="@+id/sign_up_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/shape_rounded_white"
            android:text="@string/create_a_nwe_account"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"/>

        <com.example.aldokana.MyTextViewCairo
            android:id="@+id/skip_sign_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/shape_border"
            android:text="@string/skip_sign_in"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>