<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_rounded_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:id="@+id/close"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:background="@drawable/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.example.aldokana.MyTextViewCairo
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/alert_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:padding="15dp"
        android:lineSpacingExtra="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginBottom="@dimen/_5sdp"/>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.example.aldokana.MyTextViewCairo
                android:id="@+id/home_txt"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/shape_rounded_g"
                android:text="@string/home"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"/>

            <com.example.aldokana.MyTextViewCairo
                android:id="@+id/profile_txt2"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/shape_border2"
                android:text="@string/profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>