<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerVM"
            type="com.example.aldokana.viewModels.RegisterViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:visibility="gone">

        <com.example.aldokana.MyTextViewCairo
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Register"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center"
            android:id="@+id/frame_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_120sdp"
            android:background="@drawable/shape_rounded"
            android:orientation="vertical">

            <com.example.aldokana.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/shape_rounded_grey"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profileimg"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:id="@+id/profile_img"
                    android:backgroundTint="@color/colorTextHint"/>


                <com.example.aldokana.MyEditTextBold
                    android:textAlignment="viewStart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@android:color/transparent"
                    android:paddingStart="@dimen/_10sdp"
                    android:id="@+id/name_txt"
                    android:textSize="@dimen/_14ssp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/full_name"
                    android:inputType="text"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape_rounded_grey"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/phone_img"
                android:backgroundTint="@color/colorTextHint"/>

            <com.example.aldokana.MyEditTextBold
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/phone_txt"
                android:textSize="@dimen/_14ssp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/phoe_num"
                android:inputType="phone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape_rounded_grey"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emailicon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/email_img"
                android:backgroundTint="@color/colorTextHint"/>


            <com.example.aldokana.MyEditTextBold
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/email_txt"
                android:textSize="@dimen/_14ssp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email_optional"
                android:inputType="textEmailAddress"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape_rounded_grey"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/passwordimg"
                android:layout_gravity="center"
                android:id="@+id/password_img"
                android:layout_marginStart="@dimen/_10sdp"
                android:backgroundTint="@color/colorTextHint"/>



            <com.example.aldokana.MyEditTextBold
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/_10sdp"
                android:id="@+id/password_txt"
                android:textSize="@dimen/_14ssp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:inputType="textPassword"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


            <com.example.aldokana.MyTextViewCairo
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/ss"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/_12ssp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"/>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/shape_rounded_g">

                <ng.max.slideview.SlideView
                    app:sv_animateSlideText="true"
                    android:id="@+id/slideView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:sv_buttonBackgroundColor="@color/colorPrimaryDark"
                    app:sv_buttonImage="@drawable/ic_baseline_arrow_forward_24"
                    app:sv_slideBackgroundColor="@color/colorPrimaryDark"
                    app:sv_slideTextColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <com.example.aldokana.MyTextViewCairo
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/sign_up2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"/>


            </FrameLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center">

            <com.example.aldokana.MyTextViewCairo
                android:id="@+id/sign_in_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/shape_rounded_white"
                android:text="@string/sign_in"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>