<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginVM"
            type="com.example.aldokana.viewModels.LanguageViewModel" />
    </data>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activities.LanguageActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:background="@color/white">

            <FrameLayout
                android:layout_weight="1"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp">

            </FrameLayout>
            <com.example.aldokana.MyTextViewCairo
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/language"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"/>

            <FrameLayout
                android:id="@+id/choose_language"
                android:layout_weight="1"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_centerVertical="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_baseline_keyboard_backspace_24"
                    android:rotation="180"/>


            </FrameLayout>


        </RelativeLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/frame_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_150sdp"
            android:background="@drawable/shape_rounded"
            android:orientation="vertical"
            android:gravity="center">

            <com.example.aldokana.MyButtonBold
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/shape_rounded_g"
                android:text="@string/english"
                android:id="@+id/endlish"
                android:textColor="@color/white"/>

            <com.example.aldokana.MyButtonBold
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/shape_rounded_g"
                android:text="@string/arabic"
                android:id="@+id/arabic"
                android:textColor="@color/white"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
</layout>